fix mobile overflow

--- a/source/scss/global.scss
+++ b/source/scss/global.scss
@@ -13,6 +13,7 @@ body {
 	top: 0;
 	overflow-x: hidden;
 	width: 100vw;
+	max-width: 100vw;
 }
 
 ::-webkit-scrollbar {
